--- a/index.html
+++ b/index.html
@@ -71,77 +71,77 @@
                 </div>
             </div>
             <div class="vid-list">
-                <a href="#"><img class="thumbnail" src="images/thumbnail2.png" alt=""></a>
+                <a href="play-video.html"><img class="thumbnail" src="images/thumbnail2.png" alt=""></a>
                 <div class="content">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
-                        <a href="#">Best Channel to learn coding that help you to be a web developer</a>
+                        <a href="play-video.html">Best Channel to learn coding that help you to be a web developer</a>
                         <p class="channel-name">Easy Channel</p>
                         <p>15K views &bull; 2 days ago</p>
                     </div>
                 </div>
             </div>
             <div class="vid-list">
-                <a href="#"><img class="thumbnail" src="images/thumbnail3.png" alt=""></a>
+                <a href="play-video.html"><img class="thumbnail" src="images/thumbnail3.png" alt=""></a>
                 <div class="content">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
-                        <a href="#">Best Channel to learn coding that help you to be a web developer</a>
+                        <a href="play-video.html">Best Channel to learn coding that help you to be a web developer</a>
                         <p class="channel-name">Easy Channel</p>
                         <p>15K views &bull; 2 days ago</p>
                     </div>
                 </div>
             </div>
             <div class="vid-list">
-                <a href="#"><img class="thumbnail" src="images/thumbnail4.png" alt=""></a>
+                <a href="play-video.html"><img class="thumbnail" src="images/thumbnail4.png" alt=""></a>
                 <div class="content">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
-                        <a href="#">Best Channel to learn coding that help you to be a web developer</a>
+                        <a href="play-video.html">Best Channel to learn coding that help you to be a web developer</a>
                         <p class="channel-name">Easy Channel</p>
                         <p>15K views &bull; 2 days ago</p>
                     </div>
                 </div>
             </div>
             <div class="vid-list">
-                <a href="#"><img class="thumbnail" src="images/thumbnail5.png" alt=""></a>
+                <a href="play-video.html"><img class="thumbnail" src="images/thumbnail5.png" alt=""></a>
                 <div class="content">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
-                        <a href="#">Best Channel to learn coding that help you to be a web developer</a>
+                        <a href="play-video.html">Best Channel to learn coding that help you to be a web developer</a>
                         <p class="channel-name">Easy Channel</p>
                         <p>15K views &bull; 2 days ago</p>
                     </div>
                 </div>
             </div>
             <div class="vid-list">
-                <a href="#"><img class="thumbnail" src="images/thumbnail6.png" alt=""></a>
+                <a href="play-video.html"><img class="thumbnail" src="images/thumbnail6.png" alt=""></a>
                 <div class="content">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
-                        <a href="#">Best Channel to learn coding that help you to be a web developer</a>
+                        <a href="play-video.html">Best Channel to learn coding that help you to be a web developer</a>
                         <p class="channel-name">Easy Channel</p>
                         <p>15K views &bull; 2 days ago</p>
                     </div>
                 </div>
             </div>
             <div class="vid-list">
-                <a href="#"><img class="thumbnail" src="images/thumbnail7.png" alt=""></a>
+                <a href="play-video.html"><img class="thumbnail" src="images/thumbnail7.png" alt=""></a>
                 <div class="content">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
-                        <a href="#">Best Channel to learn coding that help you to be a web developer</a>
+                        <a href="play-video.html">Best Channel to learn coding that help you to be a web developer</a>
                         <p class="channel-name">Easy Channel</p>
                         <p>15K views &bull; 2 days ago</p>
                     </div>
                 </div>
             </div>
             <div class="vid-list">
-                <a href="#"><img class="thumbnail" src="images/thumbnail8.png" alt=""></a>
+                <a href="play-video.html"><img class="thumbnail" src="images/thumbnail8.png" alt=""></a>
                 <div class="content">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
-                        <a href="#">Best Channel to learn coding that help you to be a web developer</a>
+                        <a href="play-video.html">Best Channel to learn coding that help you to be a web developer</a>
                         <p class="channel-name">Easy Channel</p>
                         <p>15K views &bull; 2 days ago</p>
                     </div>
